--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,12 +6,12 @@
     <body>
         {{>header}}
         <form id="search-form">
-            <input type="text" placeholder="Location" id="search"/>
+            <input type="text" placeholder="City" id="search"/>
             <button type="submit" id="submit">Submit</button>
         </form>
 
-        <p id="message1"></p>
-        <p id="message2"></p>
+        <p id="error-message"></p>
+        <div id="cities-list"></div>
         {{>footer}}
         <script src="/js/script.js"></script>
     </body>
