--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-</head>
-<body>
-{{>header}}
-{{>footer}}
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="icon" href="/images/weather.png">
+    </head>
+    <body>
+        {{>header}}
+        {{>footer}}
+    </body>
 </html>
