--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Weather Now. Find Out the Current Weather in Any City in the World</title>
         <link rel="stylesheet" href="/css/styles.css" />
         <link rel="icon" href="/images/weather.png">
     </head>
