--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -4,4 +4,5 @@
         <li><a href="/about">About</a></li>
         <li><a href="/help">Help</a></li>
     </ul>
+    <p>Created by Anna Shyriaieva</p>
 </footer>
