--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-<head>
-
-</head>
-<body>
-{{>header}}
-<p>{{errorMessage}}</p>
-{{>footer}}
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Error 404</title>
+        <link rel="stylesheet" href="/css/styles.css" />
+        <link rel="icon" href="/images/weather.png">
+    </head>
+    <body>
+        {{>header}}
+        <p>{{errorMessage}}</p>
+        {{>footer}}
+    </body>
 </html>
