--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,7 +9,7 @@
     <body>
         {{>header}}
         <form id="search-form">
-            <input type="text" placeholder="City" id="search"/>
+            <input type="text" placeholder="City" autocomplete="off" id="search"/>
             <button type="submit" id="submit">Submit</button>
         </form>
         <p id="error-message"></p>
