--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -9,6 +9,9 @@
     <body>
         {{>header}}
         <p>{{errorMessage}}</p>
+        <div id="cities-list">
+            <img src="/images/error_cloud.gif" alt="clouds">
+        </div>
         {{>footer}}
     </body>
 </html>
