--- a/templates/views/404.hbs
+++ b/templates/views/404.hbs
@@ -10,7 +10,7 @@
         {{>header}}
         <p>{{errorMessage}}</p>
         <div id="cities-list">
-            <img src="/images/error_cloud.gif" alt="clouds">
+            <img id="clouds" src="/images/error_cloud.gif" alt="clouds">
         </div>
         {{>footer}}
     </body>
