--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -90,7 +90,12 @@ a:hover, .cities:hover {
 }
 #clouds {
     width: 150px;
-    margin: 0 auto;
+    margin: 20px auto;
+}
+
+#loading {
+    width: 50px;
+    margin: 20px auto;
 }
 
 #weather-block{
