search button changed

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,7 +10,7 @@
         {{>header}}
         <form id="search-form">
             <input type="text" placeholder="City" autocomplete="off" id="search"/>
-            <button type="submit" id="submit">Submit</button>
+            <button type="submit" id="submit">Search All</button>
         </form>
         <p id="error-message"></p>
         <div id="cities-list"></div>
