--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -10,11 +10,11 @@
         {{>header}}
         <form id="search-form">
             <input type="text" placeholder="City" autocomplete="off" id="search"/>
-            <button type="submit" id="submit">Search All</button>
+            <button type="submit" id="submit" disabled>Search All</button>
         </form>
         <p id="error-message"></p>
-        <div id="cities-list"></div>
+        <div id="main-container"></div>
         {{>footer}}
-        <script src="/js/script.js"></script>
+        <script src="/js/bundle.js"></script>
     </body>
 </html>
